--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   google_fonts: ^4.0.4
   flutter_svg: ^1.1.6
   cupertino_icons: ^1.0.2
+  gap: ^2.0.2
+  flutter_screenutil: ^5.7.0
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
